--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bard-builder",
-  "version": "1.1.0",
+  "version": "1.3.6",
   "description": "chatbot builder framework",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -23,9 +23,8 @@
   "dependencies": {
     "@types/node": "^14.0.14",
     "@types/uuid": "^8.0.0",
+    "typescript": "^4.0.5",
     "uuid": "^8.2.0"
   },
-  "devDependencies": {
-    "typescript": "^4.0.5"
-  }
+  "devDependencies": {}
 }
