--- a/examples/faq-chatbot/package.json
+++ b/examples/faq-chatbot/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Arnaldo Badin",
   "license": "GPL-3.0-or-later",
-  "dependencies": {},
+  "dependencies": {
+    "bard-builder": "^1.3.6",
+    "express": "^4.17.1"
+  },
   "devDependencies": {}
 }
