--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/arnaldobadin/bard/issues"
   },
-  "homepage": "https://github.com/arnaldobadin/bard#readme",
+  "homepage": "https://github.com/arnaldobadin/bard/.github/README.md",
   "dependencies": {
     "@types/node": "^14.0.14",
     "@types/uuid": "^8.0.0",
