--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
     },
-    "exclude": ["node_modules", "dist", "examples"]
+    "exclude": ["node_modules", "dist", "examples", "docs", ".github"]
 }
