--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "typescript": "^4.0.5",
     "uuid": "^8.2.0"
   },
+  "keywords": [
+    "chatbot", "bot", "chatbot builder", "bot builder", "chatbot builder framework",
+    "chatbots", "bots"
+  ],
   "devDependencies": {}
 }
