--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bard-builder",
-  "version": "1.3.10",
+  "version": "1.3.11",
   "description": "chatbot builder framework",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -27,8 +27,13 @@
     "uuid": "^8.2.0"
   },
   "keywords": [
-    "chatbot", "bot", "chatbot builder", "bot builder", "chatbot builder framework",
-    "chatbots", "bots"
+    "chatbot",
+    "bot",
+    "chatbot builder",
+    "bot builder",
+    "chatbot builder framework",
+    "chatbots",
+    "bots"
   ],
   "devDependencies": {}
 }
