--- a/package.json
+++ b/package.json
@@ -1,49 +1,54 @@
 {
-  "name": "bard-builder",
-  "version": "1.5.5",
-  "description": "chatbot builder framework",
-  "main": "./dist/main.js",
-  "types": "./dist/main.d.ts",
-  "scripts": {
-    "clear": "rimraf ./dist",
-    "build": "tsc -p ./tsconfig.json",
-    "start": "npm run clear && npm run build && node ./dist/main.js",
-    "test": "jest",
-    "lint": "eslint . --ext .ts",
-    "postinstall": "npm run clear && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arnaldobadin/bard"
-  },
-  "author": "Arnaldo Badin",
-  "license": "GPLv3",
-  "bugs": {
-    "url": "https://github.com/arnaldobadin/bard/issues"
-  },
-  "homepage": "github.com/arnaldobadin/bard",
-  "dependencies": {
-    "@types/node": "^14.0.14",
-    "@types/uuid": "^8.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.0.5",
-    "uuid": "^8.2.0"
-  },
-  "keywords": [
-    "chatbot",
-    "bot",
-    "chatbot builder",
-    "bot builder",
-    "chatbot builder framework",
-    "chatbots",
-    "bots"
-  ],
-  "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4"
-  }
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "impliedStrict": true
+        }
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+        "no-console": "warn",
+        "no-irregular-whitespace": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "no-else-return": "warn",
+        "no-eval": "error",
+        "comma-dangle": "error",
+        "object-curly-spacing": ["error", "never"],
+        "semi-spacing": "error",
+        "array-bracket-spacing": ["error", "never"],
+        "no-multiple-empty-lines": "error",
+        "space-in-parens": "error",
+        "no-trailing-spaces": "error",
+        "no-with": "error",
+        "semi": "off",
+        "@typescript-eslint/semi": ["error"],
+        "indent": [2, "tab"],
+        "no-mixed-spaces-and-tabs": "error",
+        "@typescript-eslint/no-empty-interface": "off",
+        "linebreak-style": ["error", "unix"],
+        "quotes": ["error", "double"],
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/member-delimiter-style": [
+            "warn",
+            {
+                "multiline": {
+                    "delimiter": "none",
+                    "requireLast": false
+                },
+                "singleline": {
+                    "delimiter": "comma",
+                    "requireLast": true
+                }
+            }
+        ]
+    }
 }
