--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
     "name": "bard-builder",
-    "version": "1.5.6",
+    "version": "1.5.7",
     "description": "chatbot builder framework",
     "main": "./dist/main.js",
     "types": "./dist/main.d.ts",
     "scripts": {
-      "clear": "rimraf ./dist",
-      "build": "tsc -p ./tsconfig.json",
-      "start": "npm run clear && npm run build && node ./dist/main.js",
-      "test": "jest",
-      "lint": "eslint . --ext .ts",
-      "postinstall": "npm run clear && npm run build"
+        "clear": "rimraf ./dist",
+        "build": "tsc -p ./tsconfig.json",
+        "start": "npm run clear && npm run build && node ./dist/main.js",
+        "test": "jest",
+        "lint": "eslint . --ext .ts",
+        "postinstall": "npm run clear && npm run build"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/arnaldobadin/bard"
+        "type": "git",
+        "url": "git+https://github.com/arnaldobadin/bard"
     },
     "author": "Arnaldo Badin",
     "license": "GPLv3",
     "bugs": {
-      "url": "https://github.com/arnaldobadin/bard/issues"
+        "url": "https://github.com/arnaldobadin/bard/issues"
     },
     "homepage": "github.com/arnaldobadin/bard",
     "dependencies": {
-      "@types/node": "^14.0.14",
-      "@types/uuid": "^8.0.0",
-      "rimraf": "^3.0.2",
-      "typescript": "^4.0.5",
-      "uuid": "^8.2.0"
+        "@types/lodash": "^4.14.182",
+        "@types/node": "^14.0.14",
+        "@types/uuid": "^8.0.0",
+        "lodash": "^4.17.21",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.0.5",
+        "uuid": "^8.2.0"
     },
     "keywords": [
-      "chatbot",
-      "bot",
-      "chatbot builder",
-      "bot builder",
-      "chatbot builder framework",
-      "chatbots",
-      "bots"
+        "chatbot",
+        "bot",
+        "chatbot builder",
+        "bot builder",
+        "chatbot builder framework",
+        "chatbots",
+        "bots"
     ],
     "devDependencies": {
-      "@types/jest": "^27.4.1",
-      "@typescript-eslint/eslint-plugin": "^5.21.0",
-      "@typescript-eslint/parser": "^5.21.0",
-      "eslint": "^8.14.0",
-      "jest": "^27.5.1",
-      "ts-jest": "^27.1.4"
+        "@types/jest": "^27.4.1",
+        "@typescript-eslint/eslint-plugin": "^5.21.0",
+        "@typescript-eslint/parser": "^5.21.0",
+        "eslint": "^8.14.0",
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.4"
     }
-  }
-  
+}
