fix proxy + pkg version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
-node_modules
+# custom
 *.keys
 config/envs/**
 config/keys/**
+
+# deps
+node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+/bundle
+/old
+
+build
 dist
+bundle
+.env
+old
+
+# misc
+react-app-env.d.ts
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# jest
+coverage
