--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bard-builder",
-    "version": "1.6.7",
+    "version": "1.7.0",
     "description": "chatbot builder framework",
     "main": "./dist/main.js",
     "types": "./dist/main.d.ts",
@@ -28,7 +28,7 @@
         "@types/uuid": "^8.0.0",
         "lodash": "^4.17.21",
         "rimraf": "^3.0.2",
-        "typescript": "^4.0.5",
+        "typescript": "^4.8.2",
         "uuid": "^8.2.0"
     },
     "keywords": [
@@ -46,6 +46,7 @@
         "@typescript-eslint/parser": "^5.21.0",
         "eslint": "^8.14.0",
         "jest": "^27.5.1",
-        "ts-jest": "^27.1.4"
+        "ts-jest": "^27.1.4",
+        "tsc": "^2.0.4"
     }
 }
