--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "converflow",
+    "name": "convoflow",
     "version": "1.7.1",
     "description": "chatbot builder framework",
     "main": "./dist/main.js",
@@ -14,14 +14,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/arnaldobadin/converflow"
+        "url": "git+https://github.com/arnaldobadin/convoflow"
     },
     "author": "Arnaldo Badin",
     "license": "GPLv3",
     "bugs": {
-        "url": "https://github.com/arnaldobadin/converflow/issues"
+        "url": "https://github.com/arnaldobadin/convoflow/issues"
     },
-    "homepage": "github.com/arnaldobadin/converflow",
+    "homepage": "github.com/arnaldobadin/convoflow",
     "dependencies": {
         "@types/lodash": "^4.14.182",
         "@types/node": "^14.0.14",
