--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": ["ES2021"],
+        "lib": ["ES2021", "ES6"],
         "target": "es6",
         "module": "commonjs",
         "allowJs": true,
