--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "lib": ["ES2021", "ES6"],
-        "target": "es6",
+        "lib": ["ES2021", "ES6", "es2015", "ESNext", "DOM"],
+        "target": "ESNext",
         "module": "commonjs",
         "allowJs": true,
         "checkJs": false,
