--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     },
     "homepage": "github.com/arnaldobadin/convoflow",
     "dependencies": {
-        "@types/lodash": "^4.14.182",
+        "@types/lodash": "^4.17.4",
         "@types/node": "^14.0.14",
         "@types/uuid": "^8.0.0",
         "lodash": "^4.17.21",
         "rimraf": "^3.0.2",
-        "typescript": "^4.8.2",
         "uuid": "^8.2.0"
     },
     "keywords": [
@@ -41,12 +40,12 @@
         "bots"
     ],
     "devDependencies": {
-        "@types/jest": "^27.4.1",
+        "@types/jest": "^29.5.12",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
         "eslint": "^8.14.0",
-        "jest": "^27.5.1",
-        "ts-jest": "^27.1.4",
-        "tsc": "^2.0.4"
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.3",
+        "typescript": "^5.4.5"
     }
 }
